# rust_playground

./: README.md
add/add-one/: Cargo.toml
add/adder/: Cargo.toml
adder/: Cargo.toml
adder/src/: adding_method.rs  lib.rs
adv_func/: Cargo.toml
adv_types/: Cargo.toml
adv_types/src/: main.rs
advanced_traits/: Cargo.toml
advanced_traits/src/: main.rs  self_functions.rs
async-await-echo/: Cargo.toml
async-await-echo/src/: main.rs  server.rs
async_await/: Cargo.toml
async_await/src/: learn_sing_dance.rs  main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: fun_with_hash.rs  main.rs  string_utf.rs
common_variables/: Cargo.toml
common_variables/src/: main.rs
dereference/: Cargo.toml
dereference/src/: invokes.rs  main.rs
dropping/: Cargo.toml
dropping/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
generics/: Cargo.toml
http_server/: Cargo.toml
httpserver/: Cargo.toml
iterators/: Cargo.toml
macro_rules/: Cargo.toml
macros/pancakes/: Cargo.toml
macros/pancakes/src/: main.rs
managing_packages/: Cargo.toml
matching_enums/: Cargo.toml
maybe_uninit/: Cargo.toml
minigrep/: Cargo.toml
object_orient/: Cargo.toml
ooo/: Cargo.toml
ownership/: Cargo.toml
patterns_matching/: Cargo.toml
rc_smart_pointers/: Cargo.toml
slices_and_structs/: Cargo.toml
smart_pointers/: Cargo.toml
threads/: Cargo.toml
unsafe_feature/: Cargo.toml
waker/: Cargo.toml
xyz/: Cargo.toml
(+49 files in other folders)
