[package]
name = "async-await-echo"
version = "0.1.0"
authors = ["marcinh <mh@mh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# asynchronous HTTP library
hyper = "0.13.0"
# tokio runtime
tokio = { version = "0.2", features = ["full"] }

# for testing:
failure = "0.1.6"
reqwest = "0.9.24"
