[package]
name = "pancakes"
version = "0.1.0"
authors = ["marcinh <mh@mh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hellomacro = { path = "../hellomacro" }
hello_macro_derive = { path = "../hello_macro_derive" }
